<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">
    
    
    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/login_layer"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/login_layer"
        app:layout_constraintBottom_toBottomOf="@+id/imageHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/viewSupporter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imageHeader"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:background="@drawable/login_background"
        >

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:fontFamily="casual"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailTxt"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTxt"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="@string/email"
            android:textColor="@color/colorTextPrimary"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:textSize="20sp"
            tools:ignore="Autofill"/>

        <View
            android:id="@+id/viewDividerForEmail"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorTextHint"
            app:layout_constraintTop_toBottomOf="@+id/emailTxt"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline"
            app:layout_constraintBottom_toBottomOf="@+id/emailTxt"
            app:layout_constraintStart_toStartOf="@id/emailTxt"
            app:tint="@color/colorTextHint" />

        <EditText
            android:id="@+id/passwordTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/emailTxt"
            tools:ignore="Autofill"/>

        <View
            android:id="@+id/viewDividerForPassword"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorTextHint"
            app:layout_constraintTop_toBottomOf="@+id/passwordTxt"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_lock"
            app:layout_constraintBottom_toBottomOf="@+id/passwordTxt"
            app:layout_constraintStart_toStartOf="@+id/passwordTxt"
            app:tint="@color/colorTextHint"/>

        <Button
            android:id="@+id/btnSignIn"
            android:onClick="signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_button_background"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/viewDividerForPassword"/>



        <Button
            android:id="@+id/btnSignUp"
            android:onClick="createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/secondary_button_background"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/colorTextHint"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>